@@ -18,4 +18,4 @@ To install:
 To test:
 
     $ kbuildsycoca4
-    $ plasmoidviewer PlamoidName
+    $ plasmoidviewer takeoff
