@@ -1,0 +1,6 @@
+set(Takeoff_SRCS ${Takeoff_SRCS}
+    src/takeoff/MainWindow.h
+    src/takeoff/MainWindow.cpp
+
+    CACHE INTERNAL ""
+)
