@@ -1,0 +1,8 @@
+set(Takeoff_SRCS ${Takeoff_SRCS}
+    src/takeoff/config/Config.h
+    src/takeoff/config/Config.cpp
+    src/takeoff/config/ConfigForm.h
+    src/takeoff/config/ConfigForm.cpp
+
+    CACHE INTERNAL ""
+)
