@@ -1,0 +1,20 @@
+[Desktop Entry]
+Name=Takeoff
+Comment=A fullscreen launcher
+Type=Service
+Icon=start-here-kde
+X-KDE-ServiceTypes=Plasma/Applet
+
+X-KDE-Library=plasma_applet_takeoff
+X-KDE-PluginInfo-Author=José Expósito
+X-KDE-PluginInfo-Email=jose.exposito89@gmail.com
+X-KDE-PluginInfo-Name=takeoff
+X-KDE-PluginInfo-Version=1.0
+X-KDE-PluginInfo-Website=https://code.google.com/p/takeoff-launcher/
+X-KDE-PluginInfo-Category=Application Launchers
+X-KDE-PluginInfo-Depends=
+X-KDE-PluginInfo-License=GPL
+X-KDE-PluginInfo-EnabledByDefault=true 
+
+X-Plasma-Requires-FileDialog=Unused
+X-Plasma-Requires-LaunchApp=Unused
