@@ -1,0 +1,6 @@
+set(Takeoff_SRCS ${Takeoff_SRCS}
+    src/takeoff/model/favorites/Favorites.h
+    src/takeoff/model/favorites/Favorites.cpp
+
+    CACHE INTERNAL ""
+)
