@@ -1,0 +1,28 @@
+set(Takeoff_SRCS ${Takeoff_SRCS}
+    src/takeoff/model/qtxdg/xmlhelper.h
+    src/takeoff/model/qtxdg/xdgmenuwidget.h
+    src/takeoff/model/qtxdg/xdgmenurules.h
+    src/takeoff/model/qtxdg/xdgmenureader.h
+    src/takeoff/model/qtxdg/xdgmenulayoutprocessor.h
+    src/takeoff/model/qtxdg/xdgmenuapplinkprocessor.h
+    src/takeoff/model/qtxdg/xdgmenu_p.h
+    src/takeoff/model/qtxdg/xdgmenu.h
+    src/takeoff/model/qtxdg/xdgicon.h
+    src/takeoff/model/qtxdg/xdgdirs.h
+    src/takeoff/model/qtxdg/xdgdesktopfile.h
+    src/takeoff/model/qtxdg/xdgaction.h
+    src/takeoff/model/qtxdg/xmlhelper.cpp
+    src/takeoff/model/qtxdg/xdgmenuwidget.cpp
+    src/takeoff/model/qtxdg/xdgmenurules.cpp
+    src/takeoff/model/qtxdg/xdgmenureader.cpp
+    src/takeoff/model/qtxdg/xdgmenulayoutprocessor.cpp
+    src/takeoff/model/qtxdg/xdgmenuapplinkprocessor.cpp
+    src/takeoff/model/qtxdg/xdgmenu.cpp
+    src/takeoff/model/qtxdg/xdgicon.cpp
+    src/takeoff/model/qtxdg/xdgdirs.cpp
+    src/takeoff/model/qtxdg/xdgdesktopfile.cpp
+    src/takeoff/model/qtxdg/xdgaction.cpp
+    #src/takeoff/model/qtxdg/xdgmime.h src/takeoff/model/qtxdg/xdgmime.cpp
+
+    CACHE INTERNAL ""
+)
