@@ -1,0 +1,8 @@
+set(Takeoff_SRCS ${Takeoff_SRCS}
+    src/takeoff/takeoff_widget/TakeoffWidget.h
+    src/takeoff/takeoff_widget/Launcher.h
+    src/takeoff/takeoff_widget/TakeoffWidget.cpp
+    src/takeoff/takeoff_widget/Launcher.cpp
+
+    CACHE INTERNAL ""
+)
