@@ -1,0 +1,8 @@
+set(Takeoff_SRCS ${Takeoff_SRCS}
+    src/takeoff/takeoff_widget/parts/PanelArea.h
+    src/takeoff/takeoff_widget/parts/Panel.h
+    src/takeoff/takeoff_widget/parts/PanelArea.cpp
+    src/takeoff/takeoff_widget/parts/Panel.cpp
+
+    CACHE INTERNAL ""
+)
